--- a/src/app/app.dashboard-component/app.dashboard-component.component.html
+++ b/src/app/app.dashboard-component/app.dashboard-component.component.html
@@ -14,7 +14,9 @@
         <li *ngIf="userType === 'customer'"><a (click)="showCustomerPlanterOptions()">Planters</a></li>
         <li *ngIf="userType === 'customer'"><a (click)="showCustomerOrderOptions()">Orders</a></li>
         <li *ngIf="userType === 'customer'"><a href="#" (click)="showCustomerOptions()">Customers</a></li>
+       
       </ul>
+      <button  class="logout" (click)="logout()" >Logout</button>
     </nav>
   </div>
  
