--- a/src/app/app.customer-component/app.customer-component.component.html
+++ b/src/app/app.customer-component/app.customer-component.component.html
@@ -28,10 +28,10 @@
       <th>Customer Email</th>
       <th>Customer Username</th>
       <th>Customer Password</th>
-      <th>Customer City</th>
-      <th>Customer Colony</th>
-      <th>Customer House No</th>
-      <th>Customer pincode</th>
+      <th>City</th>
+      <th>Colony Name</th>
+      <th>House No</th>
+      <th>pincode</th>
       <th>update</th>
       <th> Delete </th>
     </tr>
@@ -88,10 +88,10 @@
       <th>Customer Email</th>
       <th>Customer Username</th>
       <th>Customer Password</th>
-      <th>Customer City</th>
-      <th>Customer Colony</th>
-      <th>Customer House No</th>
-      <th>Customer pincode</th>
+      <th>City</th>
+      <th>Colony Name</th>
+      <th>House No</th>
+      <th>pincode</th>
       <th>update</th>
       <th> Delete </th>
     </tr>
@@ -126,10 +126,10 @@
             <th>Customer Email</th>
             <th>Customer Username</th>
             <th>Customer Password</th>
-            <th>Customer City</th>
-            <th>Customer Colony</th>
-            <th>Customer House No</th>
-            <th>Customer pincode</th>
+            <th>City</th>
+            <th>Colony Name</th>
+            <th>House No</th>
+            <th>pincode</th>
             <th>update</th>
             <th> Delete </th>
           </tr>
@@ -218,10 +218,10 @@
       <th>Customer Email</th>
       <th>Customer Username</th>
       <th>Customer Password</th>
-      <th>Customer City</th>
-      <th>Customer Colony</th>
-      <th>Customer House No</th>
-      <th>Customer pincode</th>
+      <th>City</th>
+      <th>Colony Name</th>
+      <th>House No</th>
+      <th>pincode</th>
       <th>update</th>
       <th> Delete </th>
     </tr>
