--- a/src/app/app.dashboard-component/app.dashboard-component.component.css
+++ b/src/app/app.dashboard-component/app.dashboard-component.component.css
@@ -5,13 +5,13 @@
   max-width: 1200px;
   padding: 20px;
 }
- 
+
 h1 {
   margin-bottom: 30px;
   font-size: 2.5em;
   color: #333;
 }
- 
+
 .nav-bar {
   border-top: 4px solid #fcd911;
   background-color: #038927e3;
@@ -21,36 +21,45 @@ h1 {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
   height: 50px;
 }
- 
+
 .nav-bar ul {
   list-style: none;
   padding: 0;
 }
- 
+
 .nav-bar ul li {
   display: inline-block;
   margin-right: 20px;
 }
- 
+
 .nav-bar ul li a {
   color: rgb(255, 255, 255);
   text-decoration: none;
   font-size: 1.2em;
   transition: all 0.3s ease;
 }
- 
+
 .nav-bar ul li a:hover {
   color: #ffd700;
 }
- 
+
 .section {
   display: none;
 }
- 
+
 .section.active {
   display: block;
 }
- 
+.custom-logout-btn:hover {
+  background-color: #4ca6c1;
+  /* Darker blue on hover */
+}
+
+.custom-logout-btn .glyphicon {
+  margin-right: 5px;
+  /* Add some space between the icon and text */
+}
+
 .about {
   background-image: url('https://media.istockphoto.com/id/627521208/photo/horticulture-business.jpg?s=612x612&w=0&k=20&c=x2RRn42ezWVwW4cABqaUSI_HWCE5TkjS2RMsB3jcGtg=');
   background-size: 100% auto;
@@ -64,7 +73,7 @@ h1 {
   margin: 20px auto;
   border-radius: 4px;
 }
- 
+
 .about p {
   margin-bottom: 15px;
   text-align: center;
@@ -78,4 +87,24 @@ h1 {
   margin-top: 200px;
   padding: 8px;
 }
- 
+.logout {
+  top: -64px;
+  left: 46%;
+  margin: 10px;
+  padding: 7px;
+  border: 2px solid #f7f7f7;
+  text-align: center;
+  text-transform: uppercase;
+  position: relative;
+  overflow: hidden;
+  background-color: #038927e3;
+  color: rgb(250, 250, 250);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.logout:hover {
+  border-radius: 9px;
+  
+  transform: translateY(-5px); /* Move the button up by 5 pixels on hover */
+  box-shadow: 0 5px 10px rgba(218, 165, 32, 0.5); /* Golden color shadow towards downside */
+}
