--- a/src/app/app.plant-component/app.plant-component.component.html
+++ b/src/app/app.plant-component/app.plant-component.component.html
@@ -294,7 +294,7 @@
             <td>{{d.description}}</td>
             <td>{{d.plantsStock}}</td>
             <td>{{d.plantCost}}</td>
-            <td><button type="button" (click)="deletePlantById(d.plantId)">Add to cart</button></td>
+            <td><button type="button" (click)="addToCart(d)">Add to cart</button></td>
           </tr>
         </ng-container>
       </tbody>
