--- a/src/app/app.seed-component/app.seed-component.component.html
+++ b/src/app/app.seed-component/app.seed-component.component.html
@@ -432,7 +432,7 @@
             <td>{{d.stock}}</td>
             <td>{{d.cost}}</td>
             <td>{{d.seedsPerPacket}}</td>
-                        <td><button type="button" (click)="addToCart(d.cost)">Add to cart</button></td>
+                        <td><button type="button" (click)="addToCart(d)">Add to cart</button></td>
           </tr>
         </ng-container>
     </tbody>
